chart-nginx/templates/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:

  name: ingress

  annotations:

    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:

  rules:

    - host: shani.com

      http:

        paths:

          - path: /

            pathType: Prefix

            backend:

              service:

                name: nginx

                port:

                  number: 80
